[package]
name = "alpaca-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
