[package]
name = "alpaca-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jimmy Aguilar <kratsbinovish@gmail.com>"]
description = "This crate provides an minimal wrapper around the Alpaca API."
license = "GPL-2.0"
# readme = "Readme.md"
# repository = "https://github.com/Ergus/Extrae-rs"
# homepage = "https://github.com/Ergus/Extrae-rs"
# keywords = ["performance", "profiling"]
# categories = ["development-tools::profiling"]

[dependencies]
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "get_positions"
path = "bin/get_positions.rs"
